[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agv-agent"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "pandas",
  "requests",
  "beautifulsoup4",
  "PyPDF2",
  "pymupdf"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
agv-agent = "agv_agent.cli:main"
